# M2A

./: .env.example  .gitignore  AGENT.md  README.md  package-lock.json  package.json  turbo.json
apps/runtime/: .env.example  .gitignore  docker-compose.yml  package.json  tsconfig.json
apps/runtime/src/: config.ts  db.ts  env.ts  init.ts  server.ts
apps/runtime/src/engine/: AgentRunner.ts  MemoryRouter.ts  NodeHandlers.ts  StreamEmitter.ts  WorkflowParser.ts  (+2 more)
apps/runtime/tests/: MemoryRouter.test.ts  ToolRegistry.test.ts  WorkflowParser.test.ts
apps/studio/: .env.example  .gitignore  angular.json  package.json  prepare-vercel.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
apps/studio/public/: index.html
apps/studio/src/: index.html  routeTree.gen.ts  styles.css
contracts/m2a/: Move.toml  Published.toml
contracts/m2a/sources/: capability.move  execution.move  governance.move  m2a.move  policy.move  registry.move
contracts/m2a/tests/: execution_tests.move  policy_tests.move  registry_tests.move
services/indexer/: Cargo.toml  e2e-test.sh
services/indexer/src/: app.rs  extractors.rs  json_rpc.rs  main.rs
services/indexer/src/sui/: grpc.rs  mod.rs
services/server/: .env.example  Cargo.toml  Dockerfile
services/server/observability/: Dockerfile  README.md  docker-compose.observability.yml  otel-collector-config.yaml  railway.json
services/server/scripts/: enoki-retry.ts  sidecar-server.ts  walrus-error-detection.ts
services/server/src/: alerts.rs  jobs.rs  main.rs  mcp_proxy.rs  observability.rs  types.rs
(+155 files in other folders)
